ViTables ChangeLog
==================
** October 23, 2013 **
Still working in the columnar_org plugin.
How the plugin should work ia now clearer: select several arrays via their
checkboxes and launch the command Join Arrays. If the selected collection of
arrays cannot be joined in a unique view then the launch command is disabled.

** October 21, 2013 **
A new plugin, columnar_org, is being developed.
It will allow to combine several Array views with the same number of rows to
be combined in a unique view (it is a feature request).

** October 20, 2013 **
Minor changes have been done in vtapp, plugin_utils and vtgui modules.
In addition, the docstrings of several modules have been fixed.

** October 14, 2013 **
The docstrings of csv, dbstreesort and timeseries plugins have been fixed.

** October 10, 2013 **
The Plugins manager has been debugged and made more robust.
Also some typos in docstrings have been corrected.

Revert the commit of time_series.py. A non working version was pushed by
error to the repo.

** October 07, 2013 **
Added a new plugin for sorting the tree of DBs.

** October 06, 2013 **
Fixed a bug regarding unicode strings.

Some minor changes (typos and similar things) have been done.

The Plugins Manager has been debugged.

The timeseries plugin has been debugged. Interpolation errors have been fixed.

The development of a plugin for sorting the databases tree has started :)

** October 02, 2013 **
The package preferences has been analyzed with pylint.

The package plugins has been analyzed with pylint.

** September 30, 2013 **
refactoring module names to follow PEP 8.

Checking modules directly under the vitables package with pylint.

The package docbrowser has been analyzed with pylint.

The package h5db has been analyzed with pylint.

The package nodeprops has been analyzed with pylint.

The package vtwidgets has been analyzed with pylint.

The package vttables has been analyzed with pylint.

The package queries has been analyzed with pylint.